TEST_PROGRAMS/INVALID/anderson_santossilva/REforId.min
# Ids are define as: Letter(Letter|Digit)*, so them can't have digits at the beginning.
var 0abc: int;

